--- a/css/css.css
+++ b/css/css.css
@@ -14,7 +14,8 @@ body {
 
 
 .yellow {
-	background-color: #E3E166;
+	background-color: #E3E166; 
+
 }
 
 
@@ -43,16 +44,6 @@ padding:10px;
 	margin-top: 10px;
 }
 
-.red{
-	background-color: red;
-}
-
-
-.green {
-	background-color: green;
-}
-
-
-.yellow {
-	background-color: yellow;
+.navbar-inverse .navbar-nav>li>a {
+	color: red;
 }
