--- a/css/css.css
+++ b/css/css.css
@@ -1,16 +1,8 @@
 
 body {
-
-/* background-image: url("../images/4.JPG"); */
-background-color: #E3E166; 
-
-
-
+	background-color: #E3E166; 
 }
 
-.container {
-
-}
 
 .centre {
 	text-align: center;
@@ -19,14 +11,11 @@ background-color: #E3E166;
 
 .yellow {
 	background-color: #E3E166; 
-
 }
 
 
 .green {
-
 	background-color: #10632F;
-
 }
 
 
@@ -51,6 +40,7 @@ padding:10px;
 }
 
 
+
 .footer {
 	background-color: #10632F;
 	padding-top:20px;
@@ -60,10 +50,13 @@ padding:10px;
 	margin-top: 10px;
 }
 
-.navbar-inverse .navbar-nav>li>a {
+ .navbar-inverse .navbar-nav>li>a {
 	color: #F2E44B;
-}
-
-#our-journey {
 
 }
+
+.main-quote h1 {
+	color: white;
+	text-align: center;
+}
+
