--- a/css/css.css
+++ b/css/css.css
@@ -1,12 +1,8 @@
 
 body {
-
-
+	background-color: #E3E166; 
 }
 
-.container {
-
-}
 
 .centre {
 	text-align: center;
@@ -15,6 +11,15 @@ body {
 
 .yellow {
 	background-color: #E3E166; 
+}
+
+
+.green {
+	background-color: #10632F;
+}
+
+
+.red {
 
 }
 
@@ -30,13 +35,14 @@ padding:10px;
 
 
 #my-navbar {
-	background-color: #48C42F;
+	background-color: #10632F;
 	border: none;
 }
 
 
+
 .footer {
-	background-color: #48C42F;
+	background-color: #10632F;
 	padding-top:20px;
 }
 
@@ -44,6 +50,71 @@ padding:10px;
 	margin-top: 10px;
 }
 
-.navbar-inverse .navbar-nav>li>a {
-	color: red;
+ .navbar-inverse .navbar-nav>li>a {
+	color: #F2E44B;
+
+}
+
+.main-quote h1 {
+	color: white;
+	text-align: center;
+}
+
+
+.social {
+	display: none;
+	position:absolute;
+	right: 0;
+	padding: 20px;
+	z-index: 1;
+}
+
+.btn-social {
+	margin-left: 10px;
+	border-radius: 10px;
+	height: 40px;
+	width: 87px;
+
+}
+
+@media (min-width: 640px) {
+	.social {
+		display: block;
+	}
+	.help {
+		display: block;
+	}
+}
+
+.help {
+	display: flex;
+	list-style: none;
+	padding: 10px;
+
+}
+
+.help li {
+	background: white;
+	flex: 1;
+	
+	
+}
+
+
+.escape {
+	position: absolute;
+	left: 0;
+}
+
+.slider-title{
+	display: block;
+	position: absolute;
+	left: 
+	z-index: 2
+
+}
+
+
+.picture-holder{
+	background-color: white;
 }
