--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,7 @@
 
 body {
 	background-color: #E3E166; 
+	padding-top: 50px;
 }
 
 
@@ -20,7 +21,7 @@ body {
 
 
 .red {
-
+	background-color: red;
 }
 
 
@@ -28,36 +29,30 @@ body {
 .help_buttons {
 text-align: center;
 border: 2px solid black;
-padding:10px;
+padding:18px;
+color: black;
 
 }
 
-
-
-#my-navbar {
+.nav, .nav ul li {
 	background-color: #10632F;
+}
+
+.nav ul li a{
 	border: none;
+	color:yellow;
+
+}
+
+.navbar-brand {
+	color:black;
 }
 
 
-
-.footer {
+footer {
 	background-color: #10632F;
 	padding-top:20px;
-}
 
-.leave {
-	margin-top: 10px;
-}
-
- .navbar-inverse .navbar-nav>li>a {
-	color: #F2E44B;
-
-}
-
-.main-quote h1 {
-	color: white;
-	text-align: center;
 }
 
 
@@ -65,7 +60,7 @@ padding:10px;
 	display: none;
 	position:absolute;
 	right: 0;
-	padding: 20px;
+	padding: 10px;
 	z-index: 1;
 }
 
@@ -81,40 +76,31 @@ padding:10px;
 	.social {
 		display: block;
 	}
-	.help {
+	#escape {
 		display: block;
-	}
-}
 
-.help {
-	display: flex;
-	list-style: none;
-	padding: 10px;
-
-}
-
-.help li {
-	background: white;
-	flex: 1;
-	
-	
+	}	
 }
 
 
 .escape {
+	display: none;
 	position: absolute;
 	left: 0;
-}
-
-.slider-title{
-	display: block;
-	position: absolute;
-	left: 
-	z-index: 2
-
-}
+	height:40px;
+	margin:10px;
+	border-radius: 4px;
+	background-color: red;
+	border: solid 2px black;
+	color:black;
+	z-index: 1;
+	}
 
 
 .picture-holder{
-	background-color: white;
+	background-color: red;
+}
+
+#myCarousel {
+	border: solid black 18px;
 }
