--- a/css/css.css
+++ b/css/css.css
@@ -4,6 +4,9 @@ body {
 	padding-top: 50px;
 }
 
+.container-main {
+	background-color:white ;
+}
 
 .centre {
 	text-align: center;
@@ -19,6 +22,10 @@ body {
 	background-color: #10632F;
 }
 
+
+.navbar-toggle {
+	border:solid black 2px;
+}
 
 .red {
 	background-color: red;
