--- a/css/css.css
+++ b/css/css.css
@@ -1,7 +1,7 @@
 
 body {
-	background-color: #E3E166; 
-	padding-top: 50px;
+	background-color: #FAF9B1; 
+	
 }
 
 .container-main {
@@ -23,15 +23,20 @@ body {
 }
 
 
-.navbar-toggle {
-	border:solid black 2px;
-}
+
 
 .red {
 	background-color: red;
 }
 
+.navbar-toggle {
+	background-color: #E3E166;
+	border-color: red;
+}
 
+button span {
+	background-color: red;
+}
 
 .help_buttons {
 text-align: center;
@@ -94,7 +99,8 @@ footer {
 	display: none;
 	position: absolute;
 	left: 0;
-	height:40px;
+	height:80px;
+	width: 80px;
 	margin:10px;
 	border-radius: 4px;
 	background-color: red;
