--- a/css/css.css
+++ b/css/css.css
@@ -78,7 +78,7 @@ color: black;
 
 
 .nav, .nav  {
-	background-color: #009900;
+	background-color: #10632F;
 }
 
 .nav ul li a{
@@ -102,7 +102,7 @@ color: black;
 }
 
 footer {
-	background-color: #009900;
+	background-color: #10632F;
 	padding-top:20px;
 
 }
