--- a/css/css.css
+++ b/css/css.css
@@ -267,11 +267,10 @@ footer {
 	display: block;
 	padding-top: 40px;
 	margin: auto;
-
-<<<<<<< HEAD
 }
 
-=======
-
+.news-pic{
+	vertical-align:middle;
+	margin-top: 20px;
+	border: solid black 2px;
 }
->>>>>>> master
