--- a/css/css.css
+++ b/css/css.css
@@ -56,7 +56,7 @@ h1{
 	padding-top:0px;
 	margin-top: 0px;
 	width: auto;
-	margin: 70px;
+	margin: 20px;
 }
 
 .centre {
@@ -229,7 +229,7 @@ footer {
 .valerie {
 	size:100%;
 	border-radius: 2px;
-	border: 5px solid grey;
+	border: 1px solid grey;
 }
 
 
@@ -346,7 +346,7 @@ footer {
 .news-pic{
 	vertical-align:middle;
 	margin-top: 20px;
-	border: solid black 2px;
+	border: solid grey 1px;
 }
 
 .ebay-logo{
@@ -487,20 +487,4 @@ footer {
 		transform: rotateX(180deg);
 	}
 
-}
-
-<<<<<<< HEAD
-
-
-@media (min-width: 1100px){
-	.container-main{
-		width: 960px;
-		margin: 0 auto;
-=======
-@media (min-width: 768px) and (max-width: 800px){
-	.nav ul li a{
-		margin-right: 5px;
-		margin-left: 4px;
->>>>>>> origin/gh-pages
-	}
 }
